get and show methods